templates/ingress/ingress-template/path-based/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/db)$ $1/ redirect;
spec:
  tls:
    - hosts:
        - skalam.info
      secretName: kubernetes-dashboard-certs
  rules:
  - host: skalam.info
    http:
      paths:
      - path: /db(/|$)(.*)    #/db is matched with rewrite ^(/db)
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
